# COSC345

./: CMakeLists.txt  Doxyfile  EndScreen  EndScreen.cpp  README.md  adventure  adventure.cpp  interactions.cpp
.github/workflows/: Codecov.yml  codeql-analysis.yml  codeql.yml  flawfinder.yml  msbuild.yml
Test/: AsciiArtTest.cpp  EndScreenTest.cpp  EquipmentTest.cpp  InteractionsTest.cpp  ItemTest.cpp  MainTest.cpp  MiniGamesTest.cpp  MovementTest.cpp  PlayerTest.cpp  SafeZoneTest.cpp  StartScreenTest.cpp  StatusTest.cpp  StoreTest.cpp
build-coverage/: CMakeCache.txt  COSC345  CTestTestfile.cmake  Makefile  cmake_install.cmake  runTests  runTests[1]_include.cmake  runTests[1]_tests.cmake
docs/: DocumentFormatGuide.md  README.md  SECURITY.md
dungeon_dreams/: AsciiArt.cpp  AsciiArt.h  EndScreen.cpp  dd.cpp  dungeon_dreams  interactions.cpp  main_game.cpp
include/: AsciiArt.h  BlackJack.h  EndScreen.h  Equipment.h  Globals.h  InputUtils.h  MockAsciiArt.h  SafeZone.h  StartScreen.h  Status.h  Store.h  TestUtils.h  interactions.h  item.h  miniGames.h  movement.h  player.h  utils.h
movement_proto/: Movement.cpp  Movement.h  main.cpp
src/: player.cpp
src/dungeon_dreams/: AsciiArt.cpp  BlackJack.cpp  EndScreen.cpp  Equipment.cpp  SafeZone.cpp  StartScreen.cpp  Status.cpp  Store.cpp  TestUtils.cpp  globals.cpp  interactions.cpp  item.cpp  main.cpp  miniGames.cpp  movement.cpp  player.cpp  utils.cpp
